--- a/app/Resources/views/layout/footer.html.twig
+++ b/app/Resources/views/layout/footer.html.twig
@@ -52,6 +52,8 @@
                         <span>www.xaydungminhduy.com</span>
                     </li>
                 </ul>
+                <br>
+                {{ get_setting('dmcaScript')|raw }}
             </div>
         </div>
         <div class="row footer-middle">
@@ -70,38 +72,38 @@
             <div class="col-12 col-md-12 col-lg-3">
                 <h3 class="text-uppercase">Mạng xã hội</h3>
                 <span class="td-social-icon-wrap">
-                    <a target="_blank" href="{{ get_setting('linkToFacebook') }}" title="Sửa Nhà Minh Duy trên Facebook">
+                    <a target="_blank" href="{{ get_setting('linkToFacebook') }}" title="Xây Dựng Minh Duy trên Facebook" rel="nofollow noreferrer">
                         <i class="fab fa-facebook-f"></i>
                     </a>
                 </span>
                 <span class="td-social-icon-wrap">
-                    <a target="_blank" href="{{ get_setting('linkToGooglePlus') }}" title="Sửa Nhà Minh Duy trên Google plus">
+                    <a target="_blank" href="{{ get_setting('linkToGooglePlus') }}" title="Xây Dựng Minh Duy trên Google plus" rel="nofollow noreferrer">
                         <i class="fab fa-google-plus"></i>
                     </a>
                 </span>
                 <span class="td-social-icon-wrap">
-                    <a target="_blank" href="{{ get_setting('linkToTwitter') }}" title="Sửa Nhà Minh Duy trên Twitter">
+                    <a target="_blank" href="{{ get_setting('linkToTwitter') }}" title="Xây Dựng Minh Duy trên Twitter" rel="nofollow noreferrer">
                         <i class="fab fa-twitter"></i>
                     </a>
                 </span>
                 <span class="td-social-icon-wrap">
-                    <a target="_blank" href="{{ get_setting('linkToYoutube') }}" title="Sửa Nhà Minh Duy trên Youtube">
+                    <a target="_blank" href="{{ get_setting('linkToYoutube') }}" title="Xây Dựng Minh Duy trên Youtube" rel="nofollow noreferrer">
                         <i class="fab fa-youtube"></i>
                     </a>
                 </span>
                 <span class="td-social-icon-wrap">
-                    <a target="_blank" href="{{ get_setting('linkToLinkedin') }}" title="Sửa Nhà Minh Duy trên Linkedin">
+                    <a target="_blank" href="{{ get_setting('linkToLinkedin') }}" title="Xây Dựng Minh Duy trên Linkedin" rel="nofollow noreferrer">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                 </span>
                 <div class="event-footer row">
                     <div class="col-12 col-sm-12 col-md-12">
                         <div class="event-footer-item" itemtype="http://schema.org/Event" itemscope="">
-                            <meta content="➊ Bảng giá sửa nhà trọn gói tại TP HCM" itemprop="name">
-                            <meta content="➊ Bảng giá sửa nhà trọn gói tại TP HCM" itemprop="description">
+                            <meta content="➊ Đơn giá sửa nhà trọn gói" itemprop="name">
+                            <meta content="➊ Đơn giá sửa nhà trọn gói" itemprop="description">
                             <h6>
                                 <a href="{{ path('news_show', {'slug': 'bao-gia-sua-nha-tron-goi' }) }}" itemprop="url">
-                                    <span>➊ Bảng giá sửa nhà trọn gói tại TP HCM</span>
+                                    <span>➊ Đơn giá sửa nhà trọn gói</span>
                                 </a>
                             </h6>
                             <meta content="2021-01-01T4:00-05:00" itemprop="startDate">
@@ -110,7 +112,7 @@
                             <meta content="https://schema.org/EventScheduled" itemprop="eventStatus">
                             <meta content="{{ asset('assets/images/logo.png') }}" itemprop="image">
                             <div itemprop="location" itemscope itemtype="http://schema.org/Place">
-                                <meta content="☎️ Báo Giá 0982.969.379" itemprop="name">
+                                <meta content="☎️ Báo Giá 0982.96.93.79" itemprop="name">
                                 <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
                                     <meta content="10E3 Đường 30, P. Tân Phong, Quận 7" itemprop="streetAddress">
                                     <meta content="Ho Chi Minh" itemprop="addressLocality">
@@ -134,11 +136,11 @@
                             </div>
                         </div>
                         <div class="event-footer-item" itemtype="http://schema.org/Event" itemscope="">
-                            <meta content="➋ Bảng giá xây nhà trọn gói tại TP HCM" itemprop="name">
-                            <meta content="➋ Bảng giá xây nhà trọn gói tại TP HCM" itemprop="description">
+                            <meta content="➋ Đơn giá xây nhà trọn gói" itemprop="name">
+                            <meta content="➋ Đơn giá xây nhà trọn gói" itemprop="description">
                             <h6>
                                 <a href="{{ path('news_show', {'slug': 'bao-gia-xay-nha-tron-goi' }) }}" itemprop="url">
-                                    <span>➋ Bảng giá xây nhà trọn gói tại TP HCM</span>
+                                    <span>➋ Đơn giá xây nhà trọn gói</span>
                                 </a>
                             </h6>
                             <meta content="2021-02-02T5:00-05:00" itemprop="startDate">
@@ -147,7 +149,7 @@
                             <meta content="https://schema.org/EventScheduled" itemprop="eventStatus">
                             <meta content="{{ asset('assets/images/logo.png') }}" itemprop="image">
                             <div itemprop="location" itemscope itemtype="http://schema.org/Place">
-                                <meta content="☎️ Báo Giá 0982.969.379" itemprop="name">
+                                <meta content="☎️ Báo Giá 0982.96.93.79" itemprop="name">
                                 <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
                                     <meta content="10E3 Đường 30, P. Tân Phong, Quận 7" itemprop="streetAddress">
                                     <meta content="Ho Chi Minh" itemprop="addressLocality">
@@ -171,11 +173,11 @@
                             </div>
                         </div>
                         <div class="event-footer-item" itemtype="http://schema.org/Event" itemscope="">
-                            <meta content="➌ Dịch vụ xây nhà trọn gói tại TP HCM" itemprop="name">
-                            <meta content="➌ Dịch vụ xây nhà trọn gói tại TP HCM" itemprop="description">
+                            <meta content="➌ Thi công quán cafe" itemprop="name">
+                            <meta content="➌ Thi công quán cafe" itemprop="description">
                             <h6>
-                                <a href="{{ path('news_show', {'slug': 'xay-nha-tron-goi' }) }}" itemprop="url">
-                                    <span>➌ Dịch vụ xây nhà trọn gói tại TP HCM</span>
+                                <a href="{{ path('news_show', {'slug': 'bao-gia-thiet-ke-thi-cong-quan-cafe-tron-goi-tai-tphcm' }) }}" itemprop="url">
+                                    <span>➌ Thi công quán cafe</span>
                                 </a>
                             </h6>
                             <meta content="2021-03-03T6:00-05:00" itemprop="startDate">
@@ -184,7 +186,7 @@
                             <meta content="https://schema.org/EventScheduled" itemprop="eventStatus">
                             <meta content="{{ asset('assets/images/logo.png') }}" itemprop="image">
                             <div itemprop="location" itemscope itemtype="http://schema.org/Place">
-                                <meta content="☎️ Báo Giá 0982.969.379" itemprop="name">
+                                <meta content="☎️ Báo Giá 0982.96.93.79" itemprop="name">
                                 <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
                                     <meta content="10E3 Đường 30, P. Tân Phong, Quận 7" itemprop="streetAddress">
                                     <meta content="Ho Chi Minh" itemprop="addressLocality">
@@ -193,7 +195,7 @@
                                 </div>
                             </div>
                             <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
-                                <meta content="{{ path('news_show', {'slug': 'xay-nha-tron-goi' }) }}" itemprop="url">
+                                <meta content="{{ path('news_show', {'slug': 'bao-gia-thiet-ke-thi-cong-quan-cafe-tron-goi-tai-tphcm' }) }}" itemprop="url">
                                 <meta content="4300000" itemprop="price">
                                 <meta content="VND" itemprop="priceCurrency">
                                 <meta content="https://schema.org/InStock" itemprop="availability">
