--- a/app/Resources/views/news/components/listPrices.html.twig
+++ b/app/Resources/views/news/components/listPrices.html.twig
@@ -7,25 +7,25 @@
         </div>
         <div class="two col-xs-12 col-sm-4 col-md-3">
             <div>
-                <a href="{{ path('news_show', {'slug': 'bao-gia-xay-nha-tron-goi' }) }}" title="Bảng giá xây nhà trọn gói">
+                <a href="{{ path('news_show', {'slug': 'bao-gia-xay-nha-tron-goi' }) }}" title="Đơn giá xây nhà trọn gói">
                     <i class="far fa-building"></i>
-                    Bảng giá xây nhà trọn gói
+                    Đơn giá xây nhà trọn gói
                 </a>
             </div>
         </div>
         <div class="three col-xs-12 col-sm-4 col-md-3">
             <div>
-                <a href="{{ path('news_show', {'slug': 'bao-gia-sua-nha-tron-goi' }) }}" title="Bảng giá sửa nhà trọn gói">
+                <a href="{{ path('news_show', {'slug': 'bao-gia-sua-nha-tron-goi' }) }}" title="Đơn giá sửa nhà trọn gói">
                     <i class="fas fa-drafting-compass"></i>
-                    Bảng giá sửa nhà trọn gói
+                    Đơn giá sửa nhà trọn gói
                 </a>
             </div>
         </div>
         <div class="four col-xs-12 col-sm-4 col-md-3">
             <div>
-                <a href="{{ path('news_show', {'slug': 'bang-gia-xay-dung-nha-phan-tho' }) }}" title="Bảng giá xây nhà phần thô">
+                <a href="{{ path('news_show', {'slug': 'bang-gia-xay-dung-nha-phan-tho' }) }}" title="Đơn giá xây dựng phần thô">
                     <i class="fas fa-tools"></i>
-                    Bảng giá xây nhà phần thô
+                    Đơn giá xây dựng phần thô
                 </a>
             </div>
         </div>
