--- a/app/Resources/views/news/page.html.twig
+++ b/app/Resources/views/news/page.html.twig
@@ -9,6 +9,9 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="{{ post.getPageTitle() is not null ? post.getPageTitle() : post.getTitle() }}" />
     <meta property="og:description" content="{{ post.getPageDescription() is not null ? post.getPageDescription() : post.getDescription() }}" />
+    <meta property="og:image" content="{{ vich_uploader_asset(post, 'imageFile') ? app.request.getUriForPath(vich_uploader_asset(post, 'imageFile')) : absolute_url(asset('assets/images/no-image.png')) }}" />
+    <meta property="og:image:width" content="{{ imageSize ? imageSize[0] : '526' }}" />
+    <meta property="og:image:height" content="{{ imageSize ? imageSize[1] : '275' }}" />
 {% endblock %}
 
 {% block structuredReview %}
