--- a/app/Resources/views/news/recent.html.twig
+++ b/app/Resources/views/news/recent.html.twig
@@ -17,6 +17,9 @@
     <a href="{{ path('news_show', {'slug': 'bao-gia-thiet-ke-nha-pho' }) }}" class="list-group-item td-list-group-item item-price" title="Bảng giá thiết kế nhà phố">
         <i class="fas fa-hand-point-right"></i><span>Bảng giá thiết kế nhà phố</span>
     </a>
+    <a href="{{ path('news_show', {'slug': 'don-gia-thi-cong-noi-that-chung-cu' }) }}" class="list-group-item td-list-group-item item-price" title="Thi công nội thất chung cư">
+        <i class="fas fa-hand-point-right"></i><span>Thi công nội thất chung cư</span>
+    </a>
     <a href="{{ path('news_show', {'slug': 'bao-gia-thiet-ke-thi-cong-quan-cafe-tron-goi-tai-tphcm' }) }}" class="list-group-item td-list-group-item item-price" title="Bảng giá thiết kế thi công quán cafe">
         <i class="fas fa-hand-point-right"></i><span>Bảng giá thiết kế thi công quán cafe</span>
     </a>
