--- a/app/Resources/DmishhSettingsBundle/views/Settings/manage.html.twig
+++ b/app/Resources/DmishhSettingsBundle/views/Settings/manage.html.twig
@@ -75,6 +75,11 @@
                                             {{ form_errors(settings_form.isShowCommentOnPost) }}
                                             {{ form_widget(settings_form.isShowCommentOnPost) }}
                                         </div>
+                                        <div class="form-group">
+                                            {{ form_label(settings_form.dmcaScript) }}
+                                            {{ form_errors(settings_form.dmcaScript) }}
+                                            {{ form_widget(settings_form.dmcaScript) }}
+                                        </div>
                                     </div>
                                     <div class="tab-pane fade" id="nav-seo" role="tabpanel" aria-labelledby="nav-seo-tab">
                                         <div class="form-group">
